--- a/styles.css
+++ b/styles.css
@@ -184,5 +184,46 @@ p{
     padding: 2%;
     margin-top: 1%;
 }
+.about-img{
+    margin-left: 9%;
+}
+.about-descriptin{
+    margin-right: 20%;
+}
+.about-title{
+    color: #0A0826;
+font-family: Poppins;
+font-size: 38px;
+font-style: normal;
+font-weight: 700;
+line-height: 60px; /* 157.895% */
+}
+.about{
+    color: #6C6C6C;
+    font-family: Poppins;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
