--- a/styles.css
+++ b/styles.css
@@ -206,6 +206,17 @@ line-height: 60px; /* 157.895% */
     font-weight: 700;
 }
 
+/*footer*/
+.footer{
+    width: 1440px;
+    height: 100%;
+    background-color: blue;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif, ;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+}
+
 
 
 
